--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="<%= webpackConfig.output.publicPath %>favicon.png"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>MyCO Dashboard</title>
+    <title>MyCOHub Dashboard</title>
     <!-- Bootstrap core CSS     -->
     <meta
       name="viewport"
